{
    "name": "Test_InputAction",
    "maps": [
        {
            "name": "Test",
            "id": "9bbb792e-add5-4041-b8e1-3cae12bbc83b",
            "actions": [
                {
                    "name": "Test1",
                    "type": "PassThrough",
                    "id": "359cdff5-da30-4265-970f-c5128fd10aad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Test2",
                    "type": "Button",
                    "id": "631decc9-de0a-4528-b968-f4c1e4ea2382",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test3",
                    "type": "Button",
                    "id": "89b28b6c-57ad-4f47-8278-343745c19c70",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test4",
                    "type": "Button",
                    "id": "41471c0c-f063-4bd2-ba2b-2bebf68642ea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test5",
                    "type": "Button",
                    "id": "6c0c0672-a355-4862-86d5-28b64a41553e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test6",
                    "type": "Button",
                    "id": "10d3929f-4f17-48c0-8ad0-9b141ecad782",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test7",
                    "type": "Button",
                    "id": "93d00536-756d-48a7-b6ae-67863557848a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test8",
                    "type": "Button",
                    "id": "eadf612c-4964-4178-bb22-b1ae15e78bc1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test9",
                    "type": "Button",
                    "id": "dfd3217a-59ff-4f70-a6fc-2d03f222e4f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test10",
                    "type": "Button",
                    "id": "862bb033-c77e-4882-9f26-b809c787e6d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "df74d8b8-4c52-47ca-8ec6-3f9e5893da23",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Test1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20408683-c07a-4d87-bd62-adde187b9ec1",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bd50209-34b9-4d55-bc90-8ebc0034babc",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Test3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c216db49-6041-4ff7-93f4-558a77d26347",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Test4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d5d42bf-da9b-4059-8def-f2a002967b43",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Test5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63c147ef-404e-4915-83d7-af5484b6367b",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Test6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9062fbc1-f1da-4eef-bc4f-e068e511e9fe",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Test7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "891f8492-9c86-4ada-afdb-5d393deb6912",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Test8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44cd407c-5b5b-4913-8357-3864edfd8127",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Test9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d7b3694-d198-4c6d-9269-66f7b76ca533",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": ";KeyboardMouse",
                    "action": "Test10",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": []
        }
    ]
}